--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div align="center">
     <h1>Waaw, Congratulations Sunny  you did it ...</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
+    <h3>Thanks for chossing CodePipeline.</h3>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
