--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h1>Waaw, Congratulations Sunny  you did it ...</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
     <h3>Thanks for chossing CodePipeline.</h3>
+    <h4>Thanks Ganesh for watching this Demo</h4>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
