--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
       color: #ffffff;
       background-color: #0188cc;
       font-family: Arial, sans-serif;
-      font-size: 14px;
+      font-size: 25px;
     }
     
     h1 {
-      font-size: 500%;
+      font-size: 600%;
       font-weight: normal;
       margin-bottom: 0;
     }
     
     h2 {
-      font-size: 200%;
+      font-size: 300%;
       font-weight: normal;
       margin-bottom: 0;
     }
@@ -26,10 +26,10 @@
 </head>
 <body>
   <div align="center">
-    <h1>Waaw, Congratulations Sunny  you did it ...</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <h3>Thanks for chossing CodePipeline.</h3>
-    <h4>Thanks Ganesh for watching this Demo</h4>
+    <h1>Waaw, Congratulations Team  you did it ...</h1>
+    <h2>This website is hosted through S3.</h2>
+    <h3>Thanks for chossing Futurebright.</h3>
+    <h4>Thanks for watching Demo</h4>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
